# chatbot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  docker-compose.yml  index.html  index_ngrok.html
corebot-backend/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml
corebot-backend/locales/: en.yml  id.yml
corebot-backend/migrations/: 0001_create_restaurant_persistence.sql  0002_seed_restaurant_v1.sql  0003_add_menu_ingredients_and_references.sql
corebot-backend/src/: lib.rs  main.rs
corebot-backend/src/core/: mod.rs
corebot-backend/src/core/conversation/: README.md  mod.rs
corebot-backend/src/core/conversation/adapter/: mod.rs
corebot-backend/src/core/conversation/adapter/outbound/: english_date_resolver.rs  in_memory_conversation_repository.rs  langdetect_language_detector.rs  mod.rs  nlu_engine_gateway.rs  restaurant_business_info_gateway.rs  restaurant_domain_gateway.rs  restaurant_menu_gateway.rs  (+1 more)
corebot-backend/src/core/conversation/application/: conversation_command.rs  conversation_processor.rs  conversation_reply_renderer.rs  conversation_service.rs  conversation_usecase.rs  intent_handler.rs  mod.rs  nlu_analysis_result.rs  restaurant_handler_registry_factory.rs
corebot-backend/src/core/conversation/domain/: conversation.rs  date_resolver.rs  domain_type.rs  intent.rs  mod.rs  slot.rs  workflow.rs
corebot-backend/src/core/nlu_engine/: AGENTS.md  README.md
corebot-backend/src/core/nlu_engine/application/: analyze_text_command.rs  analyze_text_service.rs  analyze_text_usecase.rs  mod.rs  nlu_analysis_decoder.rs  nlu_artifacts.rs  nlu_inference_input.rs  nlu_model_inference.rs
corebot-backend/src/core/nlu_engine/domain/: analysis.rs  entity_type.rs  mod.rs
corebot-backend/src/core/restaurant/: mod.rs
corebot-backend/src/core/restaurant/application/: mod.rs  restaurant_service.rs
corebot-backend/src/core/restaurant/domain/: model.rs
corebot-backend/tests/: architecture_source_rules_test.rs  architecture_test.rs  conversation_routes_integration_test.rs
(+399 files in other folders)
