[package]
name = "corebot-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.2", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
axum-test = "20.0.0"
