[package]
name = "corebot-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.2", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native", "api-24"] }
thiserror = "2.0.12"
tokenizers = { version = "0.22.1", default-features = false, features = ["fancy-regex"] }

[dev-dependencies]
axum-test = "20.0.0"
tempfile = "3.20.0"
